Started API refactoring
* generate api from yaml
* handle generaed routes
* replace data types with generated one
